# music-organizer

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FUTURE-FEAT.md  MANIFEST.in  OPTIMIZATION-PROPOSAL.md  README.md  TODO.md  main.py  mo  music-organizer  pyproject.toml  test_incremental_manual.py  test_incremental_simple.py  test_parallel_extraction.py  test_plugins.py
.github/workflows/: benchmarks.yml  release.yml
.hypothesis/constants/: 034022939e1de6ed  053a13df737b1b40  059f7e0f3dcadbd3  0b7d6314d3f0487c  0f34ca7f3a0b1bb2  0fb6ecdb427bf9e9  218bc43e816abde9  21bab8c7bf9a24df  2cdfa7f35edb4fd1  2d5547b95f1b5091  37850518aac37102  3c1d96563dee3d97  3e379d3bbae31945  40514ad4c8ddbbc7  405f05f0d524400e  47f67c3d0fa494c6  4c831fa8ee136124  4d08e00e3c81c571  4d1fc4d62f4edc75  5db7d90106b9cb6c  60edf54fea63d07c  64f9723d9f6c63eb  6adeb0dc761fac76  7cfd0b87fdd041e9  7edbea9d0b284fd6  7f29e22229bc43aa  8413014a00137c26  84bde6070a286bd9  8a167936994d2d9f  8cb7490067870655  90db1c8a4d83963a  93499a7908a06c13  9a27c21b41f33767  a0fca99eda5ae114  a385a8b5def7abdd  a4300a482d9515bf  b0ceef1c372ed326  b39350e9c0b8c2c0  b74d4be4ed50c92a  c052b03a9da5f7a8  (+11 more)
.hypothesis/examples/04e6b3400353b141/: 19b0a541c98254a5  213224e2a941aea0  24cda04028b2dbbd  2f8d3691a049144d  328e298756b0f444  5961d481d19d8a64  5a2c83645686b9f4  69555a6375f4b078  74884a0219550b2f  8059dfaf53702893  88c87fb4fefdb313  9cb99fa50f978032  a0c7f681b09f39ce  bfc3b8bbbcd7ab3c  c4a8e996d30d1794  cc6e9d23b96af1b9  dbf841af518d2520  eafa57edf1bea962  f459260af6e18799  f78bf61eb381c61b  fa44439e7bbb04f6
.hypothesis/examples/213224e2a941aea0/: 0746ba8f5d15fd9a  13ecbe3c5d25ff2d  295121cb14301743  3ab4cf8776bd6d01  4a4f1861dd7c1d92  4c250a7ac4eb7aeb  602428c6ab6edaba  7744e9439399fcf1  a759fc6a055a48f3  ca57eff801ce0176  d2895fd4325aa0ef  ede2bba1ce942142
.hypothesis/examples/24cda04028b2dbbd/: 11e5f4624bd19fb7  1d6682a3dc0b76b1  4cca6d36cfb57aaa  5bb148d2d082c3ba  9c0637dd26b66391  (+3 more)
benchmarks/: benchmark_results.json  benchmark_rust_extension.py  run_benchmarks.py
config/: default.yaml
config/plugins/: custom_naming_pattern.json  duplicate_detector.json  lastfm_enhancer.json  lastfm_scrobbler.json  musicbrainz_enhancer.json
docs/: api-reference.md  batch-metadata-operations.md  cloud-storage-research.md  cqrs-implementation.md  interactive-duplicate-resolution.md  kodi-jellyfin-research.md  lastfm-integration-research.md  magic-mode.md  ml-classification-research.md  performance-tuning.md  plugin-development.md  rollback-system.md  spotify-integration-research.md  troubleshooting.md  webassembly-investigation.md
docs/architecture/: IMPLEMENTATION-GUIDE.md
examples/: advanced_batch_metadata.json  async_example.py  batch_metadata_operations.json  cqrs_example.py
native/music_organizer_rs/: Cargo.toml
native/music_organizer_rs/src/: lib.rs
src/music_organizer/: __init__.py  async_cli.py  async_progress_renderer.py  batch_metadata_cli.py  cli.py  console_utils.py  dashboard.py  dashboard_cli.py  duplicate_resolver_cli.py  enhanced_async_cli.py  exceptions.py  progress_tracker.py  regex_rules_cli.py  rich_progress_renderer.py  rollback_cli.py  update_manager.py
templates/: classification_plugin_template.py  metadata_plugin_template.py  output_plugin_template.py  path_plugin_template.py
tests/: __init__.py  test_acoustic_similarity.py  test_async_cli.py  test_async_mover.py  test_async_organizer.py  test_audio_features.py  test_batch_metadata.py  test_batch_metadata_cli.py  test_bulk_operations.py  test_bulk_progress_tracker.py  test_cache.py  test_classifier.py  test_cli.py  test_cqrs_commands.py  test_cqrs_integration.py  test_cqrs_queries.py  test_custom_naming_pattern_plugin.py  test_dashboard_cli.py  test_domain_entities.py  test_domain_events.py  test_domain_value_objects.py  test_duplicate_detector_plugin.py  test_duplicate_resolver_cli.py  test_event_bus.py  test_example_classifier_plugin.py  test_incremental_scanning.py  test_interactive_duplicate_resolver.py  test_kodi_nfo.py  test_lastfm_integration.py  test_m3u_exporter_plugin.py  test_magic_mode.py  test_memory_monitor.py  test_metadata.py  test_ml_content_classifier.py  test_ml_genre_classifier.py  test_mood_classifier.py  test_mover.py  test_musicbrainz_plugin.py  test_new_audio_formats.py  test_operation_history.py  (+15 more)
(+225 files in other folders)
