[project]
name = "music-organizer"
version = "0.1.0"
description = "Organize music library with metadata-aware categorization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "mutagen>=1.47.0",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
music-organize = "music_organizer.cli:main"
music-organize-async = "music_organizer.async_cli:main"
music-batch-metadata = "music_organizer.batch_metadata_cli:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
