[package]
name = "music_organizer_rs"
version = "0.1.0"
edition = "2021"
description = "Rust extensions for music-organizer"
license = "Apache-2.0"

[lib]
name = "music_organizer_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
